--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -35,14 +35,14 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: frontend-build
-          path: project-planning/src/main/resources/static
+          path: backend/src/main/resources/static
       - name: Set up JDK 14
         uses: actions/setup-java@v1
         with:
           java-version: 14
       - name: Build with Maven
-        run: mvn -B package --file ./project-planning/pom.xml
-      - name: upload project-planning.jar file
+        run: mvn -B package --file ./backend/pom.xml
+      - name: upload todo-app-web.jar file
         uses: actions/upload-artifact@v2
         with:
           name: todo-app-web.jar
