--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -43,6 +43,7 @@
     </dependencies>
 
     <build>
+        <finalName>todo-app-web</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
