--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -55,7 +55,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: create target folder
-        run: mkdir todo-app-web/target
+        run: mkdir backend/target
       - name: download todo-app-web.jar
         uses: actions/download-artifact@v2
         with:
