--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,6 +1,6 @@
-spring:
-  data:
-    mongodb:
-      database: todoapp
-      host: localhost
-      port: 27017
+#spring:
+#  data:
+#    mongodb:
+#      database: todoapp
+#      host: localhost
+#      port: 27017
